--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sayt.az</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -80,8 +80,84 @@
               Daxil olun
             </button>
           </div>
-          <i class="fa-solid fa-bars block xl:hidden text-[1.2rem]"></i>
-          <div class="hamburgerMenu hidden">
+          <div class="sidebar">
+            <i class="fa-solid fa-bars xl:hidden block text-[1.2rem] hover:cursor-pointer"
+              onclick="ShowHamburger()"></i>
+            <div class="hamburgerMenu w-full sm:w-[425px] hidden absolute right-0 top-0 bg-white  p-[24px] bg-white h-[100vh]">
+              <i class="fa-solid fa-xmark xl:hidden w-full block text-end text-[22px] hover:cursor-pointer"
+                onclick="ShowHamburger()"></i>
+              <div class="navLinks1 flex flex-col gap-[30px]  p-[24px]">
+                <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('VebDropItem1')">
+                  Veb sayt
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+                  <div id="VebDropItem1"
+                    class="absolute z-[999] flex-col hidden min-w-[385px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                  </div>
+                </a>
+                <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('DomenDropItem1')">
+                  Domen
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+                  <div id="DomenDropItem1"
+                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                  </div>
+                </a>
+                <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('HostinqDropItem1')">
+                  Hostinq
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+                  <div id="HostinqDropItem1"
+                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                  </div>
+                </a>
+                <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('XidDropItem1')">
+                  Xidmətlər
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+                  <div id="XidDropItem1"
+                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                  </div>
+                </a>
+                <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('CompDropItem1')">
+                  Şirkət
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+                  <div id="CompDropItem1"
+                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                  </div>
+                </a>
+              </div>
+              <div class="currencyAndCountry1 flex items-center gap-[15px] px-[24px]">
+                <a href="#" class="currency1 text-[20px] font-bold relative flex items-center">
+                  <p id="manato1" class="block">₼</p>
+                  <p id="dollare1" class="hidden">$</p>
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[15px]"></i>
+                  <div
+                    class="currencyDrop1 p-[5px] hidden absolute top-[40px] left-0 flex flex-col border bg-white w-[120%] rounded">
+                    <p class="text-[16px] block px-[8px] hover:bg-[#eee]" onclick="chooseCurrency(this)">₼</p>
+                    <p class="text-[16px] block px-[8px] hover:bg-[#eee]" onclick="chooseCurrency(this)">$</p>
+                  </div>
+                </a>
+                <a href="#" class="country1 flex items-center relative text-[20px]">
+                  <img class="w-[24px] block aze1" src="Images/flag.png" alt="flagAzerbaijan">
+                  <img class="w-[24px] hidden use1" src="Images/usaflag.png" alt="flagUSA">
+                  <i class="fa-solid fa-chevron-down text-[13px] ml-[15px]"></i>
+                  <div
+                    class="flagDrop1 hidden absolute top-[40px] left-0 flex flex-col items-center border bg-white w-[120%] rounded p-[5px]">
+                    <img class="w-[24px] block py-[2px]" src="Images/flag.png" alt="flagAzerbaijan"
+                      onclick="chooseCountry('aze1')">
+                    <img class="w-[24px] block py-[2px]" src="Images/usaflag.png" alt="flagUSA"
+                      onclick="chooseCountry('use1')">
+                  </div>
+                </a>
+              </div>
+              <div class="rightButtonsDiv flex flex-col items-center gap-[15px] xl:hidden">
+                <a class="px-[24px] py-[9px] text-center border w-full rounded-[10px] text-white bg-gradient-to-r from-[#742CE3] 
+              to-[#E1ADCB]" href="#">
+                  Qiymət Təklifi Al
+                </a>
+                <button
+                  class="px-[24px] py-[9px] text-center border w-full rounded-[10px] text-[#A271F2] border-[#A271F2]">
+                  Daxil olun
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -164,16 +240,10 @@
             class="flex items-center sm:ml-8 xmd:ml-20 md:ml-16 lmd:ml-28 xlg:ml-12 lg:ml-12 xl:ml-20 xl2:ml-24">
             <li class="w-2/5 relative ">
               <div class="absolute inset-0 flex items-center" aria-hidden="true">
-                <div class="h-0.5 w-full bg-mainLightPurple"></div>
+                <div class="h-0.5 w-full bg-gray-200"></div>
               </div>
-              <p
-                class="relative flex h-8 w-8 items-center justify-center rounded-full bg-mainLightPurple hover:bg-mainLightPurpleHover">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
-                  class="h-5 w-5 text-white">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd"></path>
-                </svg>
+              <p class="relative flex h-8 w-8 items-center justify-center rounded-full border-2 border-mainLightPurple bg-white"
+                aria-current="step"><span class="h-2.5 w-2.5 rounded-full bg-mainLightPurple" aria-hidden="true"></span>
               </p>
             </li>
             <li class="w-2/5 relative ">
@@ -235,31 +305,34 @@
             </span>
           </p>
         </div>
-        <div class="flex ">
-          <input
-            class="pl-[20px] lg:w-[420px] ms:w-[85%] w-[150px] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none"
-            type="text" placeholder="İstədiyiniz domen adını daxil edin">
-          <select class="text-[#300B60] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none">
-            <option class="text-[#300B60]" selected>.net.az</option>
-            <option class="text-[#300B60]">.biz.az</option>
-            <option class="text-[#300B60]">.info.az</option>
-            <option class="text-[#300B60]">.org.az</option>
-            <option class="text-[#300B60]">.ureb.az</option>
-            <option class="text-[#300B60]">.sayt.az</option>
-            <option class="text-[#300B60]">.site.az</option>
-            <option class="text-[#300B60]">.co.az</option>
-            <option class="text-[#300B60]">.com.az</option>
-            <option class="text-[#300B60]">.de</option>
-            <option class="text-[#300B60]">.ru</option>
-            <option class="text-[#300B60]">.me</option>
-            <option class="text-[#300B60]">.tw</option>
-            <option class="text-[#300B60]">.ws</option>
-            <option class="text-[#300B60]">.in</option>
-            <option class="text-[#300B60]">.us</option>
-            <option class="text-[#300B60]">.org</option>
-          </select>
-          <button
-            class="text-[#300B60] bg-[#A171F1] rounded-[0_5px_5px_0] text-[white] px-[30px] ms:px-[20px] py-[12px] ms:py-[12px]">Axtar</button>
+        <div class="flex flex-col items-center gap-[2px]">
+          <div class="flex justify-center">
+            <input id="section3Input" oninput="CheckDomainNames(this.value)"
+              class="pl-[20px] lg:w-[420px] ms:w-[85%] w-[150px] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none"
+              type="text" placeholder="İstədiyiniz domen adını daxil edin">
+            <select class="text-[#300B60] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none max-h-[150px]">
+              <option class="text-[#300B60]" selected>.net.az</option>
+              <option class="text-[#300B60]">.biz.az</option>
+              <option class="text-[#300B60]">.info.az</option>
+              <option class="text-[#300B60]">.org.az</option>
+              <option class="text-[#300B60]">.ureb.az</option>
+              <option class="text-[#300B60]">.sayt.az</option>
+              <option class="text-[#300B60]">.site.az</option>
+              <option class="text-[#300B60]">.co.az</option>
+              <option class="text-[#300B60]">.com.az</option>
+              <option class="text-[#300B60]">.de</option>
+              <option class="text-[#300B60]">.ru</option>
+              <option class="text-[#300B60]">.me</option>
+              <option class="text-[#300B60]">.tw</option>
+              <option class="text-[#300B60]">.ws</option>
+              <option class="text-[#300B60]">.in</option>
+              <option class="text-[#300B60]">.us</option>
+              <option class="text-[#300B60]">.org</option>
+            </select>
+            <button id="searchDomainBtn"
+              class="text-[#300B60] bg-[#A171F1] rounded-[0_5px_5px_0] text-[white] px-[30px] ms:px-[20px] py-[12px] ms:py-[12px]">Axtar</button>
+          </div>
+          <p id="myp" class="text-[14px] hidden px-[20px]"></p>
         </div>
         <div class="flex flex-wrap gap-[60px] justify-center">
           <a class="text-[#A171F1] text-[1rem]" href=""><span class="text-[24px] font-bold">.az </span><br>₼40/il</a>
@@ -283,7 +356,8 @@
           <div class="border rounded-[25px]">
             <button class="rounded-[25px] text-[1rem] py-[15px] px-[40px] hover:cursor-pointer text-[#94A3B8]"
               id="monthlyBtn">Aylıq</button>
-            <button class="rounded-[25px] text-[1rem] py-[15px] px-[40px] hover:cursor-pointer bg-[#A78BFA] text-white text-[#94A3B8]"
+            <button
+              class="rounded-[25px] text-[1rem] py-[15px] px-[40px] hover:cursor-pointer bg-[#A78BFA] text-white text-[#94A3B8]"
               id="yearlyBtn">İllik</button>
           </div>
         </div>
@@ -452,7 +526,7 @@
       </div>
     </div>
     <!-- SECTION 8 -->
-    <div class="section8 flex flex-col py-[20px] w-[88%] mx-auto gap-[35px]" id = "worksSection">
+    <div class="section8 flex flex-col py-[20px] w-[88%] mx-auto gap-[35px]" id="worksSection">
       <div class="header text-center">
         <h5 class="md:text-[32px] text-[22px] font-[650]">Son İşlərimiz</h5>
         <p class="md:text-[20px] text-[16px] text-[#4A2182]">Paylaşmaqdan Qürur Duyuruq</p>
@@ -461,28 +535,27 @@
       </div>
       <!-- PAGINATION -->
       <div class="flex justify-center space-x-1.5 py-[30px] lg:py-[100px]">
-        <button  type="button" onclick = "PrintWorks(this)"
+        <button type="button" onclick="PrintWorks(this)"
           class="inline-flex items-center justify-center w-11 h-10 py-0 border rounded-md shadow-md ">
-          <
-        </button>
-        <button   onclick = "PrintWorks(this)"
-          class="inline-flex items-center justify-center w-10 h-10 text-sm font-semibold border rounded shadow-md dark:bg-gray-50 bg-white">1</button>
-        <button type="button" onclick = "PrintWorks(this)"
-          class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
-          title="Page 2">2</button>
-        <button type="button" onclick = "PrintWorks(this)"
-          class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
-          title="Page 3">3</button>
-        <button type="button" onclick = "PrintWorks(this)"
-          class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
-          title="Page 4">4</button>
-        <button type="button" onclick = "PrintWorks(this)"
-          class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
-          title="Page 5">5</button>
-        <button title="next" type="button"  onclick = "PrintWorks(this)"
-          class="inline-flex items-center justify-center w-11 h-10 py-0 border rounded-md shadow-md dark:bg-gray-50 dark:border-gray-100">
-          >
-        </button>
+          < </button>
+            <button onclick="PrintWorks(this)"
+              class="inline-flex items-center justify-center w-10 h-10 text-sm font-semibold border rounded shadow-md dark:bg-gray-50 bg-white">1</button>
+            <button type="button" onclick="PrintWorks(this)"
+              class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
+              title="Page 2">2</button>
+            <button type="button" onclick="PrintWorks(this)"
+              class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
+              title="Page 3">3</button>
+            <button type="button" onclick="PrintWorks(this)"
+              class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
+              title="Page 4">4</button>
+            <button type="button" onclick="PrintWorks(this)"
+              class="inline-flex items-center justify-center w-10 h-10 text-sm border rounded shadow-md dark:bg-gray-50 dark:border-gray-100"
+              title="Page 5">5</button>
+            <button title="next" type="button" onclick="PrintWorks(this)"
+              class="inline-flex items-center justify-center w-11 h-10 py-0 border rounded-md shadow-md dark:bg-gray-50 dark:border-gray-100">
+              >
+            </button>
       </div>
     </div>
     <!-- SECTION 9 -->
@@ -674,6 +747,31 @@
       </div>
     </div>
   </footer>
+  <script>
+    let section3Input = document.getElementById("section3Input")
+    let searchDomainBtn = document.getElementById("searchDomainBtn")
+    let myp = document.getElementById("myp")
+    function CheckDomainNames(item) {
+      let disallowedItems = "!@#$%^&*(+=`/\?><)"
+      if (item.length < 3) {
+        myp.style.display = "block"
+        myp.innerHTML = "*Domen adının uzunluğu ən az 3 olmalıdır"
+      }
+      else {
+        myp.style.display = "block"
+        for (let i = 0; i < disallowedItems.length; i++) {
+          for (let j = 0; j < item.length; j++) {
+            if (disallowedItems[i] == item[j] || /[A-Z]/.test(item)) {
+              myp.innerHTML = "*Domen adı düzgün deyil.Domen adında yalnız hərf, rəqəm və '-' işarəsi ola bilər"
+            }
+          }
+        }
+      }
+      if (item.length == 0) {
+        myp.style.display = "none"
+      }
+    }
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   <script src="team.js"></script>
   <script src="works.js"></script>
@@ -682,6 +780,9 @@
   <script src="hideorshowdrop.js"></script>
   <script src="navdata.js"></script>
   <script src="yearlymonthly.js"></script>
+  <script src="flagcurrencyfunctions.js"></script>
+  <script src="hamburgerfunc.js"></script>
+  <script src="sideData.js"></script>
 </body>
 
 </html>
