The problem with navdrops is solved by fixing left property

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="all-navbar py-[10px] md:py-[24px] px-[28px] font-[650] fixed w-[100%] top-0 left-0 z-20 bg-white">
       <nav class="flex items-center justify-between gap-[10px] text-[1rem]">
         <a href="#"><img class="h-[35px]" src="Images/saytaz.svg" alt="Logo"></a>
-        <div class="navLinks hidden gap-[56px] lg:flex">
+        <div class="navLinks hidden gap-[50px] lg:flex">
           <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('VebDropItem')">
             Veb sayt
             <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
@@ -83,7 +83,7 @@
           <div class="sidebar">
             <i class="fa-solid fa-bars xl:hidden block text-[1.2rem] hover:cursor-pointer"
               onclick="ShowHamburger()"></i>
-            <div class="hamburgerMenu w-full sm:w-[425px] hidden absolute right-0 top-0 bg-white  p-[24px] bg-white h-[100vh]">
+            <div class="hamburgerMenu w-full lg:hidden sm:w-[425px] hidden absolute right-0 top-0 bg-white  p-[24px] bg-white h-[100vh]">
               <i class="fa-solid fa-xmark xl:hidden w-full block text-end text-[22px] hover:cursor-pointer"
                 onclick="ShowHamburger()"></i>
               <div class="navLinks1 flex flex-col gap-[30px]  p-[24px]">
@@ -91,35 +91,35 @@
                   Veb sayt
                   <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
                   <div id="VebDropItem1"
-                    class="absolute z-[999] flex-col hidden min-w-[385px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                    class="absolute z-[999] flex-col left-[-25px] hidden min-w-[385px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
                   </div>
                 </a>
                 <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('DomenDropItem1')">
                   Domen
                   <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
                   <div id="DomenDropItem1"
-                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                    class="absolute z-[999] flex-col left-[-25px] hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
                   </div>
                 </a>
                 <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('HostinqDropItem1')">
                   Hostinq
                   <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
                   <div id="HostinqDropItem1"
-                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                    class="absolute z-[999] flex-col left-[-25px] hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
                   </div>
                 </a>
                 <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('XidDropItem1')">
                   Xidmətlər
                   <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
                   <div id="XidDropItem1"
-                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                    class="absolute z-[999] flex-col left-[-25px] hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
                   </div>
                 </a>
                 <a class="hover:text-[#752EE2] relative cursor-pointer" onclick="HideShow('CompDropItem1')">
                   Şirkət
                   <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
                   <div id="CompDropItem1"
-                    class="absolute z-[999] flex-col hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
+                    class="absolute z-[999] flex-col left-[-25px] hidden w-[425px] max-h-[400px] overflow-auto gap-[15px] py-[24px] pl-[0px] pr-[0px] bg-white">
                   </div>
                 </a>
               </div>
