flag dropdown problem solved

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                   <i class="fa-solid fa-chevron-down text-[13px] ml-[15px]"></i>
                   <div
                     class="currencyDrop1 p-[5px] hidden absolute top-[40px] left-0 flex flex-col border bg-white w-[120%] rounded">
-                    <p class="text-[16px] block px-[8px] hover:bg-[#eee]" onclick="chooseCurrency(this)">₼</p>
-                    <p class="text-[16px] block px-[8px] hover:bg-[#eee]" onclick="chooseCurrency(this)">$</p>
+                    <p class="text-[16px] block px-[8px] hover:bg-[#eee]" onclick="chooseCurrency1(this)">₼</p>
+                    <p class="text-[16px] block px-[8px] hover:bg-[#eee]" onclick="chooseCurrency1(this)">$</p>
                   </div>
                 </a>
                 <a href="#" class="country1 flex items-center relative text-[20px]">
@@ -156,9 +156,9 @@
                   <div
                     class="flagDrop1 hidden absolute top-[40px] left-0 flex flex-col items-center border bg-white w-[120%] rounded p-[5px]">
                     <img class="w-[24px] block py-[2px]" src="Images/flag.png" alt="flagAzerbaijan"
-                      onclick="chooseCountry('aze1')">
+                      onclick="chooseCountry1('aze1')">
                     <img class="w-[24px] block py-[2px]" src="Images/usaflag.png" alt="flagUSA"
-                      onclick="chooseCountry('use1')">
+                      onclick="chooseCountry1('use1')">
                   </div>
                 </a>
               </div>
